src/Base/main/default/objects/Legend_Transfer_Request__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <referenceTo>Truck_Destination__c</referenceTo>
    <relationshipLabel>Legend Transfer Requests</relationshipLabel>
    <relationshipName>Legend_Transfer_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>