src/Base/main/default/objects/Legend_Transfer_Request__c/fields/Inventory_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Transfer</label>
    <referenceTo>GMBLASERP__Inventory_Transfer__c</referenceTo>
    <relationshipLabel>Legend Transfer Requests</relationshipLabel>
    <relationshipName>Legend_Transfer_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>